--- a/data/cities/bingham/jimmys-market.yml
+++ b/data/cities/bingham/jimmys-market.yml
@@ -4,8 +4,8 @@ latitude: 45.05483
 longitude: -69.88338
 postcode: "04920"
 city: Bingham
-street: Main Street
-housenumber: "65"
-phone: +1-207-672-5528
+street: ""
+housenumber: ""
+phone: ""
 opening_hours: ""
-website: http://www.jimmysshopnsave.com/
+website: ""
