--- a/data/cities/portland/print-a-bookstore.yml
+++ b/data/cities/portland/print-a-bookstore.yml
@@ -7,5 +7,5 @@ city: Portland
 street: Congress Street
 housenumber: "273"
 phone: +1 (207) 536-4778
-opening_hours: ""
+opening_hours: Tu-Th 11:00-17:00; Fr,Sa 11:00-19:00; Su 12:00-16:00
 website: https://www.printbookstore.com/
