--- a/data/cities/orono/circle-k.yml
+++ b/data/cities/orono/circle-k.yml
@@ -1,11 +1,11 @@
-id: 589837804
+id: 876641786
 type: node
-latitude: 44.8828
-longitude: -68.673
+latitude: 44.90621
+longitude: -68.68896
 postcode: "04473"
 city: Orono
-street: Main Street
-housenumber: "53"
-phone: ""
-opening_hours: ""
-website: ""
+street: Stillwater Avenue
+housenumber: "2"
+phone: +1-207-827-6100
+opening_hours: 24/7
+website: https://www.circlek.com/store-locator/US/orono/2-stillwater-ave/4707021
