--- a/data/cities/topsham/dollar-tree.yml
+++ b/data/cities/topsham/dollar-tree.yml
@@ -1,11 +1,11 @@
-id: 987015909
+id: 1335110862
 type: node
-latitude: 43.93313
-longitude: -69.98478
+latitude: 43.93306
+longitude: -69.98473
 postcode: "04086"
 city: Topsham
 street: Topsham Fair Mall Road
 housenumber: "131"
 phone: ""
-opening_hours: Mo-Sa 08:00-21:00; Su 09:00-20:00
-website: https://www.dollartree.com/locations/me/topsham/3716/
+opening_hours: ""
+website: ""
