--- a/data/cities/york/sheltons-of-york.yml
+++ b/data/cities/york/sheltons-of-york.yml
@@ -6,6 +6,6 @@ postcode: "03909"
 city: York
 street: Ocean Avenue
 housenumber: "1"
-phone: ""
-opening_hours: ""
+phone: +1 207-363-3810
+opening_hours: 09:00-17:00
 website: ""
