--- a/data/cities/gorham/cumberland-farms.yml
+++ b/data/cities/gorham/cumberland-farms.yml
@@ -1,11 +1,11 @@
-id: 394959254
+id: 539543567
 type: node
-latitude: 43.68131
-longitude: -70.43728
+latitude: 43.64037
+longitude: -70.42119
 postcode: "04038"
 city: Gorham
-street: Main Street
-housenumber: "137"
+street: Blue Ledge Road
+housenumber: "5"
 phone: ""
 opening_hours: ""
 website: ""
