--- a/data/cities/bangor/dollar-tree.yml
+++ b/data/cities/bangor/dollar-tree.yml
@@ -1,11 +1,11 @@
-id: 375846884
+id: 7185034979
 type: node
-latitude: 44.83206
-longitude: -68.755
+latitude: 44.80043
+longitude: -68.77717
 postcode: "04401"
 city: Bangor
-street: Stillwater Avenue
-housenumber: "638"
-phone: ""
-opening_hours: Mo-Sa 08:00-22:00; Su 09:00-20:00
-website: https://www.dollartree.com/locations/me/bangor/3888/
+street: Union Street
+housenumber: "226"
+phone: +1-802-239-1765
+opening_hours: Mo-Sa 09:00-22:00, Su 09:00-20:00
+website: ""
