--- a/data/cities/waterville/pleaus-market.yml
+++ b/data/cities/waterville/pleaus-market.yml
@@ -6,6 +6,6 @@ postcode: "04901"
 city: Waterville
 street: China Road
 housenumber: "10"
-phone: ""
-opening_hours: ""
-website: ""
+phone: (207) 873-4612
+opening_hours: Mo-Sa 08:00-18:00; Su 08:00-13:00
+website: https://www.pleausmarket.com
