--- a/data/cities/scarborough/costco.yml
+++ b/data/cities/scarborough/costco.yml
@@ -1,11 +1,11 @@
-id: 11359359345
+id: 1297288382
 type: node
-latitude: 43.60897
-longitude: -70.35814
+latitude: 43.60954
+longitude: -70.35649
 postcode: "04074"
 city: Scarborough
 street: Scarborough Downs Road
 housenumber: "455"
-phone: +1 207-503-9902
-opening_hours: Mo-Fr 10:00-20:30; Sa 09:30-18:00; Su 10:00-18:00
-website: https://www.costco.com/warehouse-locations/scarborough-me-1657.html
+phone: ""
+opening_hours: ""
+website: ""
